adds section to discuss arrow's theorem

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -14,6 +14,71 @@
 
 % \input{2-literature/20-literature}
 
+% \input{3-osier/30-intro}
+
+
+\chapter{Benchmark Results}
+% \label{chapter:benchmark-results}
+
+% \textcolor{red}{This chapter will remain largely unchanged except for maybe
+% one additional example, demonstrating a different dispatch model that is much
+% faster but less robust. This new dispatch model will be used in the following
+% chapter where I investigate further examples including a hypothetical ``data
+% center'' and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
+
+% \section{Exercise 0: Demonstrating \ac{osier}}
+\textcolor{red}{This section is new in the dissertation!}
+
+This section demonstrates some of the basic features of Osier. This section
+should be based on the examples in \ac{osier}'s documentation.
+
+% \section{Exercise 1: Deciding Among Evolutionary Algorithms}
+
+% \textit{Already written in prelim document.}
+
+% \section{Exercise 2: Exploring objective space}
+
+% \textit{Already written in prelim document.}
+
+% \section{Exercise 3: Four Simultaneous Objectives}
+
+% \textit{Already written in prelim document.}
+
+% \section{Exercise 4: Validating a Simplified Approach}
+
+% \textcolor{red}{This section is new in the dissertation.}
+
+\chapter{Examples with \acs{osier}}
+\label{chapter:examples}
+
+% \textcolor{red}{This chapter is entirely new to this thesis!}
+
+% \section{Example 1: Updating the \ac{set}}
+
+% \subsection{Overview of the Nuclear Fuel Cycle}
+
+% \subsection{What is the \ac{set}?}
+
+% \subsection{What metrics are available?}
+
+% \subsection{Data for the simulation}
+
+% \subsection{Results}
+
+% \subsection{Discussion}
+
+% \section{Example 2: Powering a Data Center}
+
+% \subsection{Why data centers?}
+
+% \subsection{What technology options exist?}
+
+% \subsection{Data for the simulation}
+
+% \subsection{Results}
+
+% \subsection{Discussion}
+
 \chapter{Modeling and Uncertainty: Theory}
 
 \textcolor{red}{This chapter is new in the dissertation! This is where I will handle 
@@ -23,11 +88,26 @@ Denia's comments about being clear on my normative stances.}
 involves iteratively addressing three types of uncertainties. In the chapter I will
 describe these types of uncertainties and the phases they represent.}
 
-\section{Parametric uncertainty}
+\section{Arrow's Impossibility Theorem}
 
-\section{Structural uncertainty}
+This section will motivate the importance of contextualizing an analysis based on 
+dialogue with communities (at any level) using participatory methods rather than
+surveys or assumptions about items.
 
-\section{On normative uncertainty}
+Essentially, Arrow's theorem says that a universal preference order cannot exist without
+violating one or more democratic norms.
+
+This is Arrow's original paper on social choice theory \cite{arrow_difficulty_1950}.
+
+This paper talks about \ac{mcda} and Arrow's Theorem \cite{franssen_arrows_2005}.
+
+\section{Three Types of Uncertainty}
+
+\subsection{Parametric uncertainty}
+
+\subsection{Structural uncertainty}
+
+\subsection{On normative uncertainty}
 In \acp{esom}, non-physical constraints are often introduced to direct the model
 towards a desired outcome. For example, carbon emissions are often constrained
 to identify a least cost pathway to achieving a specified emissions target by a
@@ -117,73 +197,6 @@ are prescribed. Alternatively, researchers may start the cycle anew by using the
 results to adjust the normative assumptions. Perhaps because the model results don't show
 a desirable future?
 
-
-
-
-% \input{3-osier/30-intro}
-
-
-\chapter{Benchmark Results}
-% \label{chapter:benchmark-results}
-
-% \textcolor{red}{This chapter will remain largely unchanged except for maybe
-% one additional example, demonstrating a different dispatch model that is much
-% faster but less robust. This new dispatch model will be used in the following
-% chapter where I investigate further examples including a hypothetical ``data
-% center'' and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
-
-% \section{Exercise 0: Demonstrating \ac{osier}}
-\textcolor{red}{This section is new in the dissertation!}
-
-This section demonstrates some of the basic features of Osier. This section
-should be based on the examples in \ac{osier}'s documentation.
-
-% \section{Exercise 1: Deciding Among Evolutionary Algorithms}
-
-% \textit{Already written in prelim document.}
-
-% \section{Exercise 2: Exploring objective space}
-
-% \textit{Already written in prelim document.}
-
-% \section{Exercise 3: Four Simultaneous Objectives}
-
-% \textit{Already written in prelim document.}
-
-% \section{Exercise 4: Validating a Simplified Approach}
-
-% \textcolor{red}{This section is new in the dissertation.}
-
-\chapter{Examples with \acs{osier}}
-\label{chapter:examples}
-
-% \textcolor{red}{This chapter is entirely new to this thesis!}
-
-% \section{Example 1: Updating the \ac{set}}
-
-% \subsection{Overview of the Nuclear Fuel Cycle}
-
-% \subsection{What is the \ac{set}?}
-
-% \subsection{What metrics are available?}
-
-% \subsection{Data for the simulation}
-
-% \subsection{Results}
-
-% \subsection{Discussion}
-
-% \section{Example 2: Powering a Data Center}
-
-% \subsection{Why data centers?}
-
-% \subsection{What technology options exist?}
-
-% \subsection{Data for the simulation}
-
-% \subsection{Results}
-
-% \subsection{Discussion}
 
 
 \chapter{Using modeling to enhance just outcomes}
