starts scaling study

--- a/docs/4-benchmark-results/40-benchmark.tex
+++ b/docs/4-benchmark-results/40-benchmark.tex
@@ -18,6 +18,7 @@ combining \ac{moo} with \ac{mga}.
 \input{4-benchmark-results/40-1-technology-data}
 \section{Demonstrate \ac{osier}}
 \subsection{Data for demonstration problems}
+\input{4-benchmark-results/41-1-example-data}
 \input{4-benchmark-results/41-demonstrate}
 \input{4-benchmark-results/45-new-dispatch}
 \section{Benchmark \ac{osier}}
