introduces disproportionality earlier

--- a/docs/2-literature/23-social-movements.tex
+++ b/docs/2-literature/23-social-movements.tex
@@ -17,10 +17,11 @@ infrastructure, and social wealth to a particular hazard
 after exposure to a hazard. Although climate change is a worldwide phenomenon,
 vulnerabilities to its hazards are not uniformly distributed. On the contrary,
 the people and communities most likely to be harmed by climate change are
-already harmed by social inequities \cite{islam_climate_2017}. For example,
-low-income communities have fewer resources to respond to natural hazards, such
-as hurricanes, floods, or fires, and therefore take longer to recover, compared
-to a communities with relatively greater wealth. Recent work from Simpson et al.
+already harmed by social inequities, a feature called
+\textit{disproportionality} \cite{islam_climate_2017}. For example, low-income
+communities have fewer resources to respond to natural hazards, such as
+hurricanes, floods, or fires, and therefore take longer to recover, compared to
+a communities with relatively greater wealth. Recent work from Simpson et al.
 \cite{simpson_framework_2021} expanded on this definition of risk by including
 \textit{responses} to risk as itself a driver of risk. This framework is
 illustrated in Figure \ref{fig:risk-framework} using infrastructure risk as an
@@ -260,25 +261,26 @@ produce electricity but also in the values and paradigms they represent.
 Sometimes, communication fails because the question being discussed is not
 agreed upon either. Often, feasibility studies address the positive question,
 ``what is the least-cost pathway to the energy transition,'' while others
-consider more normative questions, such as ``how should we proceed equitably?''\footnote{
-    A \textit{positive} question is one that deals with factually
-verifiable claims based on measurable data and are perceived as objective. For
-example, asking ``what is the temperature outside'' is a positive question
-because it asks what \textit{is} and can be answered by taking a measurement.
-\textit{Normative} questions engage with ethics, judgement, and values. ``What
-should I wear to go outside'' is a normative question because it asks what one
-\textit{ought} to do \cite{hands_positive-normative_2012}.} Normative questions
-are qualitative and, therefore, inherently challenging to answer and require the
-application of ethics. Indeed there are many more normative questions than
-positive ones. \textcolor{black}{Is perfect the enemy of good? How do we balance
-stakeholder preferences, upstream and downstream effects, and the necessity to
-respond quickly to climate change? Will this mix of influences lead to paralysis
-or inaction?} Engineers typically do not possess the training nor the expertise
-to answer these questions thoroughly. \textcolor{black}{Therefore, given climate
-change's complex, interacting, and disproportionate nature, engineering alone is
-ill-equipped to resolve the problem. Ideas from the environmental and energy
-justice literature offer a social perspective for addressing the risks and
-impacts of climate change hazards.} The next section introduces the concept of
-energy justice and how this area of scholarship understands challenges related
-to climate change and energy systems.
+consider more normative questions, such as ``how should we proceed
+equitably?''\footnote{ A \textit{positive} question is one that deals with
+factually verifiable claims based on measurable data and are perceived as
+objective. For example, asking ``what is the temperature outside'' is a positive
+question because it asks what \textit{is} and can be answered by taking a
+measurement. \textit{Normative} questions engage with ethics, judgement, and
+values. ``What should I wear to go outside'' is a normative question because it
+asks what one \textit{ought} to do \cite{hands_positive-normative_2012}.}
+Normative questions are qualitative and, therefore, inherently challenging to
+answer and require the application of ethics. Indeed there are many more
+normative questions than positive ones. \textcolor{black}{Is perfect the enemy
+of good? How do we balance stakeholder preferences, upstream and downstream
+effects, and the necessity to respond quickly to climate change? Will this mix
+of influences lead to paralysis or inaction?} Engineers typically do not possess
+the training nor the expertise to answer these questions thoroughly.
+\textcolor{black}{Therefore, given climate change's complex, interacting, and
+disproportionate nature, engineering alone is ill-equipped to resolve the
+problem. Ideas from the environmental and energy justice literature offer a
+social perspective for addressing the risks and impacts of climate change
+hazards.} The next section introduces the concept of energy justice and how this
+area of scholarship understands challenges related to climate change and energy
+systems.
 
