--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -56,6 +56,7 @@
 \acro{set}[SET tool]{Screening and Evaluation Tool}
 \acro{mca}[MCA]{municipal choice aggregation}
 \acro{imea}[IMEA]{Illinois Municipal Electric Agency}
+\acro{icea}[ICEA]{Illinois Competitive Energy Association}
 \acro{ppa}[PPA]{power purchase agreement}
 \acro{pypsa}[\texttt{PyPSA}]{Python for Power Systems Analysis}
 \acro{lib}[LiB]{lithium-ion battery}
@@ -67,3 +68,5 @@
 \acro{co2}[CO$_2$]{carbon dioxide}
 \acro{co2eq}[CO$_2$-eq]{CO$_2$-equivalent}
 \acro{unece}[UNECE]{United Nations Economic Commission for Europe}
+\acro{nest}[NEST]{Naperville Environment and Sustainability Task Force}
+\acro{cub}[CUB]{Citizens Utility Board}
