adds detail about interview transcribing

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -11402,22 +11402,6 @@ facilities.},
 	file = {Fugacci et al. - 2016 - Persistent homology a step-by-step introduction f.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/8LQ8XGCG/Fugacci et al. - 2016 - Persistent homology a step-by-step introduction f.pdf:application/pdf},
 }
 
-@article{braun_using_2006,
-	title = {Using thematic analysis in psychology},
-	volume = {3},
-	issn = {1478-0887},
-	url = {https://www.tandfonline.com/doi/abs/10.1191/1478088706qp063oa},
-	doi = {10.1191/1478088706qp063oa},
-	abstract = {Thematic analysis is a poorly demarcated, rarely acknowledged, yet widely used qualitative analytic method within psychology. In this paper, we argue that it offers an accessible and theoretically flexible approach to analysing qualitative data. We outline what thematic analysis is, locating it in relation to other qualitative analytic methods that search for themes or patterns, and in relation to different epistemological and ontological positions. We then provide clear guidelines to those wanting to start thematic analysis, or conduct it in a more deliberate and rigorous way, and consider potential pitfalls in conducting thematic analysis. Finally, we outline the disadvantages and advantages of thematic analysis. We conclude by advocating thematic analysis as a useful and flexible method for qualitative research in and beyond psychology.},
-	pages = {77--101},
-	number = {2},
-	journaltitle = {Qualitative Research in Psychology},
-	author = {Braun, Virginia and Clarke, Victoria},
-	urldate = {2023-12-13},
-	date = {2006-01-01},
-	keywords = {flexibility, epistemology, patterns, qualitative psychology, thematic analysis},
-}
-
 @article{arrow_difficulty_1950,
 	title = {A Difficulty in the Concept of Social Welfare},
 	volume = {58},
@@ -18650,4 +18634,110 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	date = {2012-01-01},
 	doi = {10.1016/B978-0-444-51676-3.50009-9},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/4XTQT74A/Hands - 2012 - The Positive-Normative Dichotomy and Economics.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/RCM4WIQ7/B9780444516763500099.html:text/html},
+}
+
+@article{dotson_available_nodate,
+	title = {Available Bodily Injury Insurance Coverage Limits},
+	author = {Dotson, Samuel G},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/QNQDNK53/Dotson - Available Bodily Injury Insurance Coverage Limits.pdf:application/pdf},
+}
+
+@incollection{manwell_wind_2009,
+	title = {Wind Characteristics and Resources},
+	isbn = {978-1-119-99436-7},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9781119994367.ch2},
+	abstract = {This chapter contains sections titled: Introduction General Characteristics of the Wind Resource Characteristics of the Atmospheric Boundary Layer Wind Data Analysis and Resource Estimation Wind Turbine Energy Production Estimates Using Statistical Techniques Regional Wind Resource Assessment Wind Prediction and Forecasting Wind Measurement and Instrumentation Advanced Topics References},
+	pages = {23--89},
+	booktitle = {Wind Energy Explained},
+	publisher = {John Wiley \& Sons, Ltd},
+	author = {Manwell, J.F. and {McGowan}, J.G. and Rogers, A.L.},
+	urldate = {2025-03-27},
+	date = {2009},
+	langid = {english},
+	doi = {10.1002/9781119994367.ch2},
+	keywords = {and longitudinal, and pressure differences - across earth's surface, at particular sites - relevant to certain topics, European-based {ANEMOS} project work - accurate and robust models, global origins of wind resource, global winds, knowledge of wind characteristics, lateral and vertical components, need for wind resource information - for load management, operation requirements, operational procedures, outperforming current state-of-the-art forecasting models for onshore and offshore applications, statistically based technique, surface winds of worldwide circulation pattern, turbulent wind, uneven heating of earth by solar radiation, widely used - the Measure–Correlate–Predict ({MCP}) approach, wind characteristics and resources - topics in wind energy, wind resource measurement techniques and instrumentation},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/8UFKWFJH/2009 - Wind Characteristics and Resources.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/MR2N9JEM/9781119994367.html:text/html},
+}
+
+@article{battaglia_listen_2024,
+	title = {From “Listen and Repeat” to “Listen and Revise”: How to Transcribe Interviews Offline Quickly and for Free Using Voice Recognition Software},
+	volume = {23},
+	issn = {1609-4069},
+	url = {https://doi.org/10.1177/16094069241247473},
+	doi = {10.1177/16094069241247473},
+	shorttitle = {From “Listen and Repeat” to “Listen and Revise”},
+	abstract = {Transcribing interviews is one of the most time-consuming and alienating tasks in qualitative research. Some have tried to bypass the problem by hiring external transcribers, which however can be very expensive. Whether due to the time and energy or the financial investment that transcribing requires, researchers therefore often self-impose a limit on the number of interviews that they conduct or even refuse to conduct interviews altogether. To prevent this and help reduce transcription fatigue, some scholars have developed the so-called “listen and repeat” technique. This involves speaking into a microphone what one hears through their headset while a voice recognition software transcribes word by word what it hears. However, this technique has many limitations and still requires a considerable amount of time and effort to be put by the researcher. This article introduces an alternative transcription technique which helps overcome these problems thanks to recent advancements of Artificial Intelligence in the field of voice recognition. Although the drawbacks and unintended consequences of Artificial Intelligence are often highlighted, this article explores its use for interview transcription showing that it can improve drastically the work and life of qualitative researchers. More specifically, this article introduces a transcription technique which allows to generate transcripts fully offline (avoiding in so doing the security concerns that the rising number of cloud-based transcription platforms often raise), rapidly and at little to no cost which one only needs to revise whilst listening to interview recordings, which is why I call this the “listen and revise” technique.},
+	pages = {16094069241247473},
+	journaltitle = {International Journal of Qualitative Methods},
+	author = {Battaglia, Fabio},
+	urldate = {2025-03-30},
+	date = {2024-01-01},
+	note = {Publisher: {SAGE} Publications Inc},
+	file = {SAGE PDF Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/H6CGKTTP/Battaglia - 2024 - From “Listen and Repeat” to “Listen and Revise” How to Transcribe Interviews Offline Quickly and fo.pdf:application/pdf},
+}
+
+@article{noauthor_nuclear_nodate,
+	title = {Nuclear Reactor Physics and Engineering},
+	url = {https://onlinelibrary.wiley.com/doi/epub/10.1002/9781119582342},
+	urldate = {2025-04-19},
+	langid = {english},
+	note = {{ISBN}: 9781119582342},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/UB98UI5B/9781119582342.html:text/html},
+}
+
+@incollection{noauthor_perturbation_2020,
+	title = {Perturbation Theory and Adjoint Flux},
+	rights = {© 2020 John Wiley \& Sons, Inc.},
+	isbn = {978-1-119-58234-2},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9781119582342.ch10},
+	abstract = {This chapter presents the basic concepts behind perturbation theory and its applications to the determination of reactivity perturbations due to cross section changes. It offers a brief introduction to the operator notation with two simple examples, followed by the definition of the adjoint operator and the associated adjoint flux. The chapter provides a formal derivation of the general perturbation expression for eigenvalue changes and indicates how the first-order perturbation formulation is obtained. The specific expression for the eigenvalue changes in one-group neutron diffusion theory is also discussed. The chapter examines a few first-order perturbation examples, including the expressions for the differential and integral rod worths, together with interpretations of the adjoint flux. Other applications of adjoint formulations are also discussed such as the adjoint flux for variational formulation, adjoint flux for detector response calculation, and the adjoint formulation for flux perturbation calculation.},
+	pages = {255--271},
+	booktitle = {Nuclear Reactor Physics and Engineering},
+	publisher = {John Wiley \& Sons, Ltd},
+	urldate = {2025-04-19},
+	date = {2020},
+	langid = {english},
+	doi = {10.1002/9781119582342.ch10},
+	note = {Section: 10
+\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781119582342.ch10},
+	keywords = {adjoint flux, adjoint operator, control rod worth calculation, detector response calculation, first-order perturbation theory, flux perturbation calculation, neutron diffusion equation, variational formulation},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/QQJN7VFV/2020 - Perturbation Theory and Adjoint Flux.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/2QUXYWWG/9781119582342.html:text/html},
+}
+
+@article{braun_using_2006,
+	title = {Using thematic analysis in psychology},
+	volume = {3},
+	issn = {1478-0887},
+	url = {https://www.tandfonline.com/doi/abs/10.1191/1478088706qp063oa},
+	doi = {10.1191/1478088706qp063oa},
+	abstract = {Thematic analysis is a poorly demarcated, rarely acknowledged, yet widely used qualitative analytic method within psychology. In this paper, we argue that it offers an accessible and theoretically flexible approach to analysing qualitative data. We outline what thematic analysis is, locating it in relation to other qualitative analytic methods that search for themes or patterns, and in relation to different epistemological and ontological positions. We then provide clear guidelines to those wanting to start thematic analysis, or conduct it in a more deliberate and rigorous way, and consider potential pitfalls in conducting thematic analysis. Finally, we outline the disadvantages and advantages of thematic analysis. We conclude by advocating thematic analysis as a useful and flexible method for qualitative research in and beyond psychology.},
+	pages = {77--101},
+	number = {2},
+	journaltitle = {Qualitative Research in Psychology},
+	author = {Braun, Virginia and and Clarke, Victoria},
+	urldate = {2025-04-28},
+	date = {2006-01-01},
+	note = {Publisher: Routledge
+\_eprint: https://www.tandfonline.com/doi/pdf/10.1191/1478088706qp063oa},
+	keywords = {epistemology, flexibility, patterns, qualitative psychology, thematic analysis},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/8TZWXZTQ/Braun and and Clarke - 2006 - Using thematic analysis in psychology.pdf:application/pdf},
+}
+
+@article{erlingsson_hands-guide_2017,
+	title = {A hands-on guide to doing content analysis},
+	volume = {7},
+	issn = {2211-419X},
+	url = {https://www.sciencedirect.com/science/article/pii/S2211419X17300423},
+	doi = {10.1016/j.afjem.2017.08.001},
+	abstract = {There is a growing recognition for the important role played by qualitative research and its usefulness in many fields, including the emergency care context in Africa. Novice qualitative researchers are often daunted by the prospect of qualitative data analysis and thus may experience much difficulty in the data analysis process. Our objective with this manuscript is to provide a practical hands-on example of qualitative content analysis to aid novice qualitative researchers in their task.},
+	pages = {93--99},
+	number = {3},
+	journaltitle = {African Journal of Emergency Medicine},
+	shortjournal = {African Journal of Emergency Medicine},
+	author = {Erlingsson, Christen and Brysiewicz, Petra},
+	urldate = {2025-04-28},
+	date = {2017-09-01},
+	keywords = {Content analysis, Qualitative data analysis, Qualitative research},
+	file = {Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/MDTW7RAW/Erlingsson and Brysiewicz - 2017 - A hands-on guide to doing content analysis.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/C25IABSA/S2211419X17300423.html:text/html},
 }
