--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -1,3 +1,7 @@
+\section{Introduction}
+
+
+
 \section{Literature Review?}
 
 \textcolor{red}{What are some of the novelties of this study}
@@ -13,12 +17,40 @@
 
 \section{Methodology}
 
+\subsection{Thematic Analysis}
+This thesis relies on multiple case studies using interviews with energy planners and decision makers at local
+and state levels, extending the method described by Johannsen et al. 2021 \cite{johannsen_designing_2021}. The
+interviewees were chosen to be paradigmatic cases (\textcolor{red}{Is this really what I mean?}) \cite{flyvbjerg_five_2006}.
+The interviews were transcribed with the ``listen and revise method'' using the Whisper transcription tool \cite{battaglia_listen_2024}. Whisper uses \ac{ai} to automate the transcription
+process. Both the data and the \ac{ai} model used to transcribe the interview audio were hosted locally (i.e., without an internet
+connection), eliminating privacy concerns \cite{battaglia_listen_2024}. Figure \ref{fig:whisper} shows a screenshot of the 
+Whisper interface. The interview coding step was also performed locally with
+the \texttt{Taguette} tool \cite{rampin_taguette_2021}. Figure \ref{fig:taguette} shows a screenshot of the \texttt{Taguette}
+software.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.6\columnwidth]{figures/07_interview_chapter/whisper-screenshot.png}
+    \caption{A screenshot of an interview transcribed with Whisper. To protect the privacy of the interviewees, only ``Speaker 1'' is shown. 
+    ``Speaker 1'' is the author of this thesis.}
+    \label{fig:whisper}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.6\columnwidth]{figures/07_interview_chapter/taguette-screenshot}
+    \caption{A screenshot of the interview transcribed in Figure \ref{fig:whisper}
+    loaded into \texttt{Taguette} for initial coding.}
+    \label{fig:taguette}
+\end{figure}
+
 \subsection{Interview Data Collection}
 
 \begin{enumerate}
     \item Who did I interview and what organizations were they from?
     \item Why did I choose these interviews?
     \item When were the interviews conducted?
+    \item How were the interviews conducted? (i.e., over Zoom)
 \end{enumerate}
 
 \subsection{Case ``Municipalities''}
