--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -70,3 +70,4 @@
 \acro{unece}[UNECE]{United Nations Economic Commission for Europe}
 \acro{nest}[NEST]{Naperville Environment and Sustainability Task Force}
 \acro{cub}[CUB]{Citizens Utility Board}
+\acro{ai}[AI]{artificial intelligence}
